# ip-info

./: .gitignore  Cargo.toml  Dockerfile  flake.nix  rust-toolchain.toml
.github/workflows/: publish-docker.yaml
src/: common.rs  content_negotiation.rs  handle_css.rs  handle_index.rs  lib.rs  main.css  main.rs
templates/: index.html
