[package]
name = "ip-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.31"
html-escape = "0.2.13"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha3 = "0.10.6"
tiny_http = "0.11.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
