[package]
name = "ip-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.14"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
html-escape = "0.2"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shake = "0.1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = false
debug = true
